--- a/todo-aspnetmvc-ui/todo-aspnetmvc-ui.csproj
+++ b/todo-aspnetmvc-ui/todo-aspnetmvc-ui.csproj
@@ -14,6 +14,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="BootstrapBlazor" Version="7.6.6" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.5" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.5" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.5">
